// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeAfterOrEqualTo > fails when given a later date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeAfterOrEqualTo()[22m

Expected date to be after or equal to [31m2019-09-01T22:00:00.000Z[39m but received:
  [31m2019-09-10T22:00:00.000Z[39m"
`;

exports[`.not.toBeAfterOrEqualTo > fails when given an equal date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeAfterOrEqualTo()[22m

Expected date to be after or equal to [31m2019-09-01T22:00:00.000Z[39m but received:
  [31m2019-09-01T22:00:00.000Z[39m"
`;

exports[`.toBeAfterOrEqualTo > fails when given an earlier date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeAfterOrEqualTo()[22m

Expected date to be after or equal to [31m2019-09-10T22:00:00.000Z[39m but received:
  [31m2019-09-01T22:00:00.000Z[39m"
`;
